--- a/index.html
+++ b/index.html
@@ -153,6 +153,99 @@
       </div>
     </section>
 
+    <!-- ABOUT / WHY SECTION -->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">Why This Book</h1>
+              <p class="lead pb-3">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolores, nostrum magni. Illo enim amet distinctio!
+              </p>
+            </div>
+
+            <!-- ACCORDION -->
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse1" class="collapse show">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Nulla nihil sint dolorem illum perferendis vero aspernatur
+                    commodi rem quidem blanditiis! amet consectetur adipisicing
+                    elit. Nulla nihil sint dolorem illum perferendis vero
+                    aspernatur commodi rem quidem blanditiis!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain The
+                      Knowledge
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse2" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Nulla nihil sint dolorem illum perferendis vero aspernatur
+                    commodi rem quidem blanditiis! amet consectetur adipisicing
+                    elit. Nulla nihil sint dolorem illum perferendis vero
+                    aspernatur commodi rem quidem blanditiis!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse3"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse3" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Nulla nihil sint dolorem illum perferendis vero aspernatur
+                    commodi rem quidem blanditiis! amet consectetur adipisicing
+                    elit. Nulla nihil sint dolorem illum perferendis vero
+                    aspernatur commodi rem quidem blanditiis!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
